# MotionPlusPlus

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: LibMotionPlusPlusConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/: Controller.hpp  ControllerManager.hpp  DeviceConnection.hpp  DeviceManager.hpp  WiiMote.hpp
include/libmotionplusplus/: Controller.hpp  ControllerManager.hpp  DeviceConnection.hpp  DeviceManager.hpp  WiiMote.hpp
src/: Controller.cpp  ControllerManager.cpp  DeviceConnection.cpp  DeviceManager.cpp  WiiMote.cpp  main.cpp
udev/: 99-motionplusplus.rules
